<resources>
    <string name="app_name" translatable="false">ValenBisi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_location_permission">No location permission, location will not work.</string>

    <string name="nav_map">Mapa</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_donate">Quitar anuncios</string>
    <string name="nav_share">Comparte</string>
    <string name="nav_about">Sobre la aplicación</string>

    <string name="descStar">Star icon</string>

    <string name="mapView">Vista de mapa satélite</string>
    <string name="pref_mapView_summary_off">El mapa será normal</string>
    <string name="pref_mapView_summary_on">El mapa será vista satélite</string>

    <string name="matchNavigationBar">Barra de navegación</string>
    <string name="pref_matchNavigationBar_summary_off">El color no se ajustará</string>
    <string name="pref_matchNavigationBar_summary_on">El color se ajustará</string>

    <string name="pref_showAvailable_summary_on">Se mostrarán sólo las estaciones disponibles</string>
    <string name="pref_showAvailable_summary_off">Se mostrarán todas las estaciones</string>
    <string name="showAvailable">Mostrar sólo estaciones disponibles</string>

    <string name="showFavourites">Mostrar sólo favoritos</string>
    <string name="pref_showFavourites_summary_off">Se mostrarán todas las estaciones</string>
    <string name="pref_showFavourites_summary_on">Se mostrarán solo las estaciones favoritas</string>

    <string name="voronoi">Celdas de Voronoi</string>
    <string name="pref_voronoi_summary_off">No se mostrarán las celdas de Voronoi</string>
    <string name="pref_voronoi_summary_on">Se mostrarán las celdas de Voronoi</string>
    <string name="voronoi_info">Para saber qué es una celda de Voronoi haz click aquí</string>

    <string name="initialZoom">Zoom inicial</string>
    <string name="pref_initialZoom_summary_off">No se hará zoom a la posición actual al iniciar la aplicación</string>
    <string name="pref_initialZoom_summary_on">Se hará zoom a la posición actual al iniciar la aplicación</string>

    <string name="pref_lastUpdated_summary_off">No se mostrará la hora de la última actualización en cada estación</string>
    <string name="pref_lastUpdated_summary_on">Se mostrará la hora de la última actualización en la estación</string>

    <string name="bikeLanes">Carriles bici por defecto</string>

    <string name="cicloCalles">Diferenciar ciclocalles</string>
    <string name="pref_cicloCalles_summary_off">Las ciclocalles se mostrarán en el mismo color que los carriles</string>
    <string name="pref_cicloCalles_summary_on">Las ciclocalles se mostrarán en un color diferente a los carriles</string>

    <string name="language">Idioma</string>
    <string name="language_summary">Cambiar el idioma de la app</string>

    <string name="donation_ad_restore">Restaurar anuncios</string>
    <string name="donation_ads_removed">Anuncios eliminados :(</string>
    <string name="donation_ads_restored">Anuncios restaurados, gracias!</string>

    <string name="load_lanes">Cargando carriles&#8230;</string>
    <string name="load_stations">Cargando estaciones&#8230;</string>
    <string name="load_parking">Cargando parkings&#8230;</string>

    <string name="no_internet">No hay conexión de Internet</string>
    <string name="no_internet_message">La aplicación no funcionará sin Internet. Conéctate y reiníciala.</string>
    <string name="close">Cerrar</string>
    <string name="continuer">Continuar de todas formas</string>

    <string name="update_available">Actualización disponible</string>
    <string name="update_message">¿Quieres actualizar la aplicación?</string>
    <string name="update_ok">Vale</string>
    <string name="update_not_now">Ahora no</string>
    <string name="update_never">Nunca</string>

    <string name="alpha_title">Versión alpha</string>
    <string name="alpha_message">Atención! Estás usando una versión alpha. Puede contener fallos.</string>

    <string name="no_data">No se han podido cargar los datos :(</string>

    <string name="spots">Huecos&#58;</string>
    <string name="bikes">Bicis:</string>
    <string name="closed">Estación cerrada</string>

    <string name="plazas">Plazas totales:</string>
    <string name="parking">Parking bicis</string>

    <string name="default_locale">Por defecto</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="french">Francés</string>
    <string name="catalan">Catalán</string>
    <string name="default_locale_code" translatable="false">default_locale</string>
    <string name="spanish_code" translatable="false">es</string>
    <string name="english_code" translatable="false">en</string>
    <string name="french_code" translatable="false">fr</string>
    <string name="catalan_code" translatable="false">ca</string>

    <string name="others">Otros</string>

    <string name="purchase_failed">Vaya, algo ha salido mal al contactar con la Play Store! :(</string>
    <string name="purchase_success">Muchísimas gracias por tu donación! :D</string>
    <string name="license">Licencia correcta</string>
    <string name="donation_cancelled">Proceso cancelado :(</string>
    <string name="last_updated">Última actualización:</string>
    <string name="lastUpdated">Última actualización</string>

    <string name="data_old">Los datos llevan más de una hora sin actualizarse,</string>
    <string name="data_unreliable">puede que no coincidan con la realidad.</string>

    <string name="zoom_in">Haz zoom para ver las estaciones</string>

    <string name="stations">Estaciones</string>

    <string name="clustering" translatable="false">Clustering</string>
    <string name="pref_clustering_summary_off">Las estaciones no se agruparán al alejar el zoom</string>
    <string name="pref_clustering_summary_on">Las estaciones se agruparán al alejar el zoom</string>
    <string name="title_activity_donate">Apoya al desarrollador</string>
    <string name="donation_1">Apoya con 1€</string>
    <string name="donation_3">Apoya con 3€</string>
    <string name="donation_5">Apoya con 5€</string>
    <string name="donation_remove_ads">Quita los anuncios(gratis)</string>
    <string name="about_developer" translatable="false">© 2018 Systemallica</string>
    <string name="about_version">Versión</string>
    <string name="about_rate">Déjanos una puntuación</string>
    <string name="about_support">Apoya el desarrollo</string>
    <string name="about_about">Sobre la aplicación</string>
    <string name="about_changelog">Registro de cambios</string>
    <string name="about_releases">Versiones</string>
    <string name="about_versions_url" translatable="false">https://github.com/systemallica/ValenBisi/blob/master/CHANGELOG.md</string>
    <string name="about_fork">Crea un fork en GitHub</string>
    <string name="about_url" translatable="false">https://github.com/systemallica/valenbisi</string>
    <string name="about_libs">Librerías de código abierto</string>
    <string name="about_author">Autor</string>
    <string name="about_author_name" translatable="false">Andrés Reverón Molina</string>
    <string name="about_authot_location">España</string>
    <string name="about_visit">Visita mi página web</string>
    <string name="about_author_web" translatable="false">https://andres.reveronmolina.me</string>
    <string name="about_send_email">Envíame un email</string>
    <string name="about_author_email" translatable="false">andres@reveronmolina.me</string>
    <string name="about_author_email_subject" translatable="false">Valenbisi</string>
    <string name="about_issue_url" translatable="false">https://github.com/systemallica/ValenBisi/issues/new</string>
    <string name="about_issue">¿Algún problema? Cuéntanos</string>

</resources>
