
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/nav_map">

        <CheckBoxPreference
            android:key="initialZoom"
            android:title="@string/initialZoom"
            android:summaryOff="@string/pref_initialZoom_summary_off"
            android:summaryOn="@string/pref_initialZoom_summary_on"
            android:defaultValue="true"
            android:icon="@drawable/icon_zoom_in"/>

        <CheckBoxPreference
            android:key="isSatellite"
            android:title="@string/mapView"
            android:summaryOff="@string/pref_mapView_summary_off"
            android:summaryOn="@string/pref_mapView_summary_on"
            android:defaultValue="false"
            android:icon="@drawable/menu_icon_map"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cicloCalles"
            android:summaryOff="@string/pref_cicloCalles_summary_off"
            android:summaryOn="@string/pref_cicloCalles_summary_on"
            android:title="@string/cicloCalles"
            android:icon="@drawable/icon_road"/>

        <CheckBoxPreference
            android:key="isClusteringActivated"
            android:title="@string/clustering"
            android:summaryOff="@string/pref_clustering_summary_off"
            android:summaryOn="@string/pref_clustering_summary_on"
            android:defaultValue="true"
            android:icon="@drawable/icon_blur"/>

        <CheckBoxPreference
            android:key="voronoiCell"
            android:title="@string/voronoi"
            android:summaryOff="@string/pref_voronoi_summary_off"
            android:summaryOn="@string/pref_voronoi_summary_on"
            android:defaultValue="false"
            android:icon="@drawable/icon_change_history"/>

        <Preference
            android:key="infoVoronoi"
            android:summary="@string/voronoi_info"
            android:icon="@drawable/menu_icon_about"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/stations">

        <CheckBoxPreference
            android:key="showFavorites"
            android:title="@string/showFavourites"
            android:summaryOff="@string/pref_showFavourites_summary_off"
            android:summaryOn="@string/pref_showFavourites_summary_on"
            android:defaultValue="false"
            android:icon="@drawable/icon_star"/>

        <CheckBoxPreference
            android:key="showAvailable"
            android:title="@string/showAvailable"
            android:summaryOff="@string/pref_showAvailable_summary_off"
            android:summaryOn="@string/pref_showAvailable_summary_on"
            android:defaultValue="false"
            android:icon="@drawable/icon_check"/>

        <CheckBoxPreference
            android:key="lastUpdated"
            android:title="@string/lastUpdated"
            android:summaryOff="@string/pref_lastUpdated_summary_off"
            android:summaryOn="@string/pref_lastUpdated_summary_on"
            android:defaultValue="true"
            android:icon="@drawable/icon_watch_later"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/others">

        <CheckBoxPreference
            android:key="navBar"
            android:title="@string/matchNavigationBar"
            android:summaryOff="@string/pref_matchNavigationBar_summary_off"
            android:summaryOn="@string/pref_matchNavigationBar_summary_on"
            android:defaultValue="true"
            android:icon="@drawable/icon_invert_colors"/>

        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:summary="@string/language_summary"
            android:entries="@array/languages"
            android:entryValues="@array/languages_values"
            android:defaultValue="@string/default_locale_code"
            android:icon="@drawable/icon_language"/>

        <Preference
            android:key="blank"/>

    </PreferenceCategory>

</PreferenceScreen>
