<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/menu_icon_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_icon_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/menu_icon_forbidden"
            android:title="@string/nav_donate" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/menu_icon_share_alt"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/menu_icon_about"
            android:title="@string/nav_about" />
    </group>

</menu>
